--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.0) experimental; urgency=low
+
+  * Miniflux version 2.0.0.
+
+ -- Frédéric Guillot <fred@miniflux.net>  Thu, 11 Jan 2018 20:20:03 +0000
+
 miniflux (2.0.0-rc1) experimental; urgency=low
 
   * Initial release.
