--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.4) experimental; urgency=low
+
+  * Miniflux version 2.0.4 (See https://github.com/miniflux/miniflux/releases/tag/2.0.4)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Mon, 5 Mar 2018 21:32:42 -0800
+
 miniflux (2.0.3) experimental; urgency=low
 
   * Miniflux version 2.0.3 (See https://github.com/miniflux/miniflux/releases/tag/2.0.3)
