--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.7) experimental; urgency=low
+
+  * Miniflux version 2.0.7 (See https://github.com/miniflux/miniflux/releases/tag/2.0.7)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Mon, 7 May 2018 20:23:49 -0700
+
 miniflux (2.0.6) experimental; urgency=low
 
   * Miniflux version 2.0.6 (See https://github.com/miniflux/miniflux/releases/tag/2.0.6)
