--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.10) experimental; urgency=low
+
+  * Miniflux version 2.0.10 (See https://github.com/miniflux/miniflux/releases/tag/2.0.10)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Sun, 22 Jul 2018 21:32:19 -0700
+
 miniflux (2.0.9) experimental; urgency=low
 
   * Miniflux version 2.0.9 (See https://github.com/miniflux/miniflux/releases/tag/2.0.9)
