--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.16) experimental; urgency=low
+
+  * Miniflux version 2.0.16 (See https://github.com/miniflux/miniflux/releases/tag/2.0.16)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Sat, 8 Jun 2019 20:43:49 -0700
+
 miniflux (2.0.15) experimental; urgency=low
 
   * Miniflux version 2.0.15 (See https://github.com/miniflux/miniflux/releases/tag/2.0.15)
