--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.18) experimental; urgency=low
+
+  * Miniflux version 2.0.18 (See https://github.com/miniflux/miniflux/releases/tag/2.0.18)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Wed, 25 Sep 2019 20:22:57 -0700
+
 miniflux (2.0.17) experimental; urgency=low
 
   * Miniflux version 2.0.17 (See https://github.com/miniflux/miniflux/releases/tag/2.0.17)
