--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.21) experimental; urgency=low
+
+  * Miniflux version 2.0.21 (See https://github.com/miniflux/miniflux/releases/tag/2.0.21)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Sat, 28 Mar 2020 15:13:58 -0700
+
 miniflux (2.0.20) experimental; urgency=low
 
   * Miniflux version 2.0.20 (See https://github.com/miniflux/miniflux/releases/tag/2.0.20)
