--- a/miniflux/debian/changelog
+++ b/miniflux/debian/changelog
@@ -1,3 +1,9 @@
+miniflux (2.0.22) experimental; urgency=low
+
+  * Miniflux version 2.0.22 (See https://github.com/miniflux/miniflux/releases/tag/2.0.22)
+
+ -- Frédéric Guillot <fred@miniflux.net>  Fri, 19 Jun 2020 11:48:18 -0700
+
 miniflux (2.0.21) experimental; urgency=low
 
   * Miniflux version 2.0.21 (See https://github.com/miniflux/miniflux/releases/tag/2.0.21)
